--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/kobis-opcl-rest-v1.0.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/kobis-opcl-soap-v1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
