--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ohmovie</name>
+	<name>OhMovie</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -46,12 +46,39 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1532311000803</id>
+			<id>1537457982002</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
-				<arguments>1.0-name-matches-false-false-node_modules</arguments>
+				<arguments>1.0-name-matches-false-false-app</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1537457982057</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-app</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1537457982070</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-app</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1537457982078</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-app</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
