--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe",
+  "name": "app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +9,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf ../src/main/webapp/resources/front/build/ && mv build/ ../src/main/webapp/resources/front",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "homepage": "/resources/front/build"
 }
