--- a/app/package.json
+++ b/app/package.json
@@ -5,14 +5,18 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && rm -rf ../src/main/webapp/resources/front/build/ && mv build/ ../src/main/webapp/resources/front",
+    "start": "cross-env NODE_PATH=src react-scripts start",
+    "build": "cross-env NODE_PATH=src react-scripts build && rm -rf ../src/main/webapp/resources/front/build/ && mv build/ ../src/main/webapp/resources/front",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080",
-  "homepage": "/resources/front/build"
+  "homepage": "/resources/front/build",
+  "devDependencies": {
+    "cross-env": "^5.2.0"
+  }
 }
